peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/Gds_Score_Request_Company__c.object-meta.xml
<CustomObject>
    <label>Gds Score Request Company</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Gds Score Request Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gds Score Request Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>