peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Account_State_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Account_State_Of_Incorporation__c</fullName>
    <description>Store Account State Of Incorporation from account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account State Of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>