peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/CCG_Marlin_Score__c.field-meta.xml
<CustomField>
    <fullName>CCG_Marlin_Score__c</fullName>
    <label>CCG Marlin Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>