peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/CCG_Reasons_Not_Scored__c.field-meta.xml
<CustomField>
    <fullName>CCG_Reasons_Not_Scored__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCG Reasons Not Scored</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>