peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/CCG_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>CCG_Risk_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCG Risk Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>