peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/CCG_Scorecard_Used__c.field-meta.xml
<CustomField>
    <fullName>CCG_Scorecard_Used__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCG Scorecard Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>