peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/CCG_Total_Exposure_Amount__c.field-meta.xml
<CustomField>
    <fullName>CCG_Total_Exposure_Amount__c</fullName>
    <label>CCG Total Exposure Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>