peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Store Primary contact name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>