peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>Store primary contact title</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>