peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Current_Month_Paydex__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Paydex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Month Paydex</label>
    <length>200</length>
    <type>Text</type>
</CustomField>