peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/D_B_Highest_Credit__c.field-meta.xml
<CustomField>
    <fullName>D_B_Highest_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>D&amp;B Highest Credit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>