peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/D_B_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>D_B_Number_of_Employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>D&amp;B Number of Employees</label>
    <length>200</length>
    <type>Text</type>
</CustomField>