peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/D_B_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>D_B_Return_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>D&amp;B Return Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>