peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <description>Store Date Established from Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Established</label>
    <length>255</length>
    <type>Text</type>
</CustomField>