peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Db_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Db_Duns_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Db Duns Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>