peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>