peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Ebfa_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Ebfa_File_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ebfa File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>