peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/EBFILENUMBER__c.field-meta.xml
<CustomField>
    <fullName>EBFILENUMBER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBFILENUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>