peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Equip_Address2__c.field-meta.xml
<CustomField>
    <fullName>Equip_Address2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equip_Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>