peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Equip_Address__c.field-meta.xml
<CustomField>
    <fullName>Equip_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equip_Address</label>
    <type>TextArea</type>
</CustomField>