peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Experian_Business_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Experian_Business_File_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Experian Business File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>