peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/FastTrak_IAD_Eligible__c.field-meta.xml
<CustomField>
    <fullName>FastTrak_IAD_Eligible__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FastTrak IAD Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>