peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/FAX__c.field-meta.xml
<CustomField>
    <fullName>FAX__c</fullName>
    <description>Store fax number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>