peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Id_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>