peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Is_Company_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Company_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Company Changed</label>
    <type>Checkbox</type>
</CustomField>