peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Last_Date_Scored_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Scored_Retrieved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Date Scored Retrieved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>