peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Marlin_Sic__c.field-meta.xml
<CustomField>
    <fullName>Marlin_Sic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marlin Sic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>