peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Paynet_Max_Orig_Receivable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paynet_Max_Orig_Receivable_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paynet Max Orig Receivable Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>