peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Paynet_Sbri_Score__c.field-meta.xml
<CustomField>
    <fullName>Paynet_Sbri_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paynet Sbri Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>