peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Primary_Contact_Final_Email_Validity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Final_Email_Validity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact Final Email Validity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>