peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Request_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Request_Based_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Based On</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gds Score Request Companies</relationshipLabel>
    <relationshipName>Gds_Score_Request_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>