peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/STRUCTURE__c.field-meta.xml
<CustomField>
    <fullName>STRUCTURE__c</fullName>
    <description>Store Business type from account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>STRUCTURE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>