peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Tib_Num__c.field-meta.xml
<CustomField>
    <fullName>Tib_Num__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tib Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>