peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/TIB_Override__c.field-meta.xml
<CustomField>
    <fullName>TIB_Override__c</fullName>
    <description>TIB Override Checkbox of the Applicant</description>
    <label>TIB Override</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>