peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/TIBNUM_Manual__c.field-meta.xml
<CustomField>
    <fullName>TIBNUM_Manual__c</fullName>
    <description>Months Verified (TIB) with the manually entered value of the Applicant</description>
    <label>Months Verified (TIB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>