peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/UD_DLR_CLASSIFICATION__c.field-meta.xml
<CustomField>
    <fullName>UD_DLR_CLASSIFICATION__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD DLR CLASSIFICATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>