peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Store company website</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Website</label>
    <type>Url</type>
</CustomField>