peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/recordTypes/Lease.recordType-meta.xml
<RecordType>
    <fullName>Lease</fullName>
    <active>true</active>
    <description>For Lease</description>
    <label>Lease</label>
</RecordType>