peac_dev/force-app/main/default/objects/Gds_Score_Request_Company__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>For Loan</description>
    <label>Loan</label>
</RecordType>